# LLaSO

./: README.md  pyproject.toml
llaso/: constants.py  conversation.py  data_add_tokens_release.py  mm_utils.py  utils.py
llaso/data/: data_merge.py
llaso/evaluation/: model_eval.py
llaso/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
llaso/scripts/: align.sh  finetune.sh  finetune_whisper.sh
llaso/train/: llava_trainer.py  train.py  train_mem.py
results/Audio-Reasoner/: 1M_GPT4_end_test.jsonl  3.5M_GPT3.5_end_test.jsonl  CREMAD_EIE_classification_test.jsonl  CREMAD_ER_classification_test.jsonl  NSynth_instrument_classification_test.jsonl  NSynth_music_source_classification_test.jsonl  NSynth_pitch_recognition_test.jsonl  Synthetic_Audio_Classification_test.jsonl  accentdb_AI_classification_test.jsonl  alpacaDan_input_1_test.jsonl  alpacaDan_instruction_0_test.jsonl  alpaca_gpt4_end_test.jsonl  code_alpaca_end_test.jsonl  common-voice_accent_classification_test.jsonl  common-voice_age_classification_test.jsonl  common-voice_gender_classification_test.jsonl  dolly_input_1_test.jsonl  dolly_instruction_0_test.jsonl  meld_EIE_classification_test.jsonl  meld_ER_classification_test.jsonl  meld_SV_classification_test.jsonl  orca_input_1_test.jsonl  orca_instruction_0_test.jsonl  phoneme_recognition_test.jsonl  pronunciation_scoring_sentence_level_test.jsonl  pronunciation_scoring_word_level_test.jsonl  slurp_Entity_Extraction_test.jsonl  slurp_Intent_Prediction_test.jsonl  speechcommand_recognition_test.jsonl  (+14 more)
(+683 files in other folders)
